--- a/VRChat/31/1069331.html
+++ b/VRChat/31/1069331.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hwId9lkrkNTY4EH+0/SDiOy7FBhV3e1mPUEIbTYxgUI="></script>
+    "H3dUZAaVK6YyhePKITqzVo6jk/ZC9bvFT1QMBtf1CEI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター向け】ミーシャ【FBX】","description":"Humanoid対応のオリジナルモデル「ミーシャ」です。\n\n主にVRChatでの使用を想定しています。\n揺れ物用のボーン（髪・スカート・リボン）も入っておりますので、Unityの有償アセット（Dynamic Bone）を利用して揺らすことができます。\n\nこの商品は\nUnity 2019.4.31f1\nで動作確認しております。\n\n","url":"https://booth.pm/ja/items/1069331","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/674fc427-6fbb-4335-8520-23bc1069d4f5/i/1069331/dd79cc1e-3556-435d-a17d-7b437ea1b30b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hwId9lkrkNTY4EH+0/SDiOy7FBhV3e1mPUEIbTYxgUI="></script>
+    nonce="H3dUZAaVK6YyhePKITqzVo6jk/ZC9bvFT1QMBtf1CEI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1069331/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               378
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1069331/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               378
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
