--- a/VRChat/33/1069333.html
+++ b/VRChat/33/1069333.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CQm8r24wHtKXEKvpNNWxn2OLSLU1woBPzkXfi2m0iis="></script>
+    "rVo4PfYhxSaRub2naGSrUTSNLRbWoYFYIKAuZ3RFh8U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"箱市展示品_斧","description":"箱市に展示してある斧です\n利用用途は特に考えてないです。\nポリゴン数結構多いのでご了承ください\n\nスペック\nマテリアル：1\nポリゴン数：4230\nマテリアル一つに対して\nシェーダーはスタンダードシェーダーを利用\nAlbedo / Metallic / Normal map\nの適用が必要です。\nNormal map適用後にfix nowを忘れずに実行してください\n\n一応VRChatで使用するのを想定していますが、他の場所で使ってもらっても問題有りません。\n改変等自由に行ってOKです。\n\n簡易規約\n商用利用：OK\n改変：OK\n\n再配布：NG\n特定の個人、集団に対する誹謗中傷、名誉棄損：NG\n\n利用上で不利益、トラブルが起こっても私は関知しませんし、一切の責任を負いません。自己責任でお願いします。","url":"https://booth.pm/ja/items/1069333","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8254d2af-29c2-4f0d-b9b6-9ebf2add62f7/i/1069333/09eb8a85-e77f-4235-b45c-d0bd817ceaac_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CQm8r24wHtKXEKvpNNWxn2OLSLU1woBPzkXfi2m0iis="></script>
+    nonce="rVo4PfYhxSaRub2naGSrUTSNLRbWoYFYIKAuZ3RFh8U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1069333/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1069333/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
