updated at: 2023-04-25 19:03, VRChat向け「風鈴」 - ヨコシマ工房 - BOOTH

--- a/VRChat/69/1069069.html
+++ b/VRChat/69/1069069.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+6qNjrtETFitP7PBQ9RMEFwnN9BuNFZBVMrvcoURNI0="></script>
+    "AwhX9C1sQ4373Dd/41tWFcb/q0QDqxnvXHErox1/80g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け「風鈴」","description":"風を音で心地よく知らせる夏の風物詩、風鈴です。\n(モデルに風鈴の音は入っていません)\n\nこの風鈴は主に個人がVRChatでアバターに装着したり、ワールドに置くことを想定しています。\n\n揺れもの用のボーンが入っているので、dynamicbone等の有償アセットを使用することで風鈴を揺らすことができます。\n\n風鈴が風に揺られているアニメーションが入っています。\n\nポリゴン数は642です。\n\n球体側面部と短冊のUV配列を整えているので自分で好きなガラス模様や文字を描くことができます。\n\nユニティパッケージになっています。","url":"https://booth.pm/ja/items/1069069","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1069069/2f21b60b-c49e-473c-8240-cbc66daed048_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+6qNjrtETFitP7PBQ9RMEFwnN9BuNFZBVMrvcoURNI0="></script>
+    nonce="AwhX9C1sQ4373Dd/41tWFcb/q0QDqxnvXHErox1/80g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1069069/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              423
+                              425
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1069069/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              423
+                              425
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
