--- a/VRChat/82/1068982.html
+++ b/VRChat/82/1068982.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "z/3cQ4VxdYu5JPSHXHl6FfrH5LRtsAC8kZdxar+HkUw="></script>
+    "4On8ptLaDs1jghKkzgYWcPfFZnvOr12zuSmGEqFIrGE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料][VRChat向け]悪魔のウイング","description":"悪魔のウイングです\nZIP中身\n.fbx/.tga *2/.unitypackage\n\nポリゴン数 ：2623*2\n\n二次配布、自作発言、商用利用はお止めください\n改変自由 R18/G使用可能\nvrchat使用限\n不明な点や質問などありましたらこちらに連絡ください\nそれでは良きVRCライフを ブラザース！\nNO FURTHER PLAN FOR FIXING ITS PROBLEM.","url":"https://booth.pm/ja/items/1068982","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/753c946e-b3d0-4d99-ad93-71a37cc147a2/i/1068982/5604a57e-ffd5-4d26-9ae5-f80a7e65c3dc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="z/3cQ4VxdYu5JPSHXHl6FfrH5LRtsAC8kZdxar+HkUw="></script>
+    nonce="4On8ptLaDs1jghKkzgYWcPfFZnvOr12zuSmGEqFIrGE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1068982/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               238
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1068982/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               238
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
