updated at: 2023-04-25 19:03, 【帽子・杖】ハロウィンセット【ローポリ】 - おーもり屋 - BOOTH

--- a/VRChat/28/1067928.html
+++ b/VRChat/28/1067928.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FsvUO82F5F1b/Q8QPm4cmPtxajnz++NJg9YwZTVpSFc="></script>
+    "N788XzC9Ktq/MLB+mE1klhJStsmnE2S8lrR7/T2jI/k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【帽子・杖】ハロウィンセット【ローポリ】","description":"ハロウィンをイメージした帽子型および杖型ややローポリゴン3Dモデルのセットです。\nVRChat等の自作3Dモデルを使用可能なゲームでご利用いただけます。\n完全自作のゲーム等でご利用いただけます。\nバーチャルYouTuber等の配信者のアバター等にご利用いただけます。\n3Dモデルデータおよび画像データは自由に改変してご利用いただけます。","url":"https://booth.pm/ja/items/1067928","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8cb4421e-f2e1-45d8-add4-b0798304ddd9/i/1067928/01c23bc9-9520-4035-bff5-5eeb34f90dda_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FsvUO82F5F1b/Q8QPm4cmPtxajnz++NJg9YwZTVpSFc="></script>
+    nonce="N788XzC9Ktq/MLB+mE1klhJStsmnE2S8lrR7/T2jI/k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1067928/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1067928/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
