--- a/VRChat/66/1065766.html
+++ b/VRChat/66/1065766.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xDEPIRJxehxo5/C9PD+25cClPskuSk3WvvT5x5ePJ1Q="></script>
+    "fjufiFJ4kY3xO24KXoP9ASWSeYW5dPMfXpn12CvfHHE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【素体付き】着せ替え用コスチューム - Red hot Thief","description":"●モデル説明\n【3Dモデル】着せ替え用コスチューム - Red hot Thief\n制作者：ひるね\n\nポリゴン数：△11768\nマテリアル数：4個\n\nVRChat用のhumanoid対応\nフルボディトラッキング対応\nデスクトップモーション対応モデル同梱\n（VRChat内でしゃがみモーションをした際に腰が逆くの字に折れ難いようにボーンを配置しています）\n\ntex001のマテリアルは両面描画のためCulloffの設定をオススメします\n\nポリゴン数の削減、メッシュの貫通を防ぐため一部素肌のメッシュを削除しています、ご了承ください\n\nソックスなどをテクスチャ改変で穿かせ易いように脚のUVマップを調整しています（画像参考）\n\n3Dモデルの着せ替え用に制作されたモデルです、頭部のオブジェクトは同梱されていません\n他の改変可能な3Dモデルと組み合わせてご利用ください\n\n\n※モデル説明の下に利用規約が記載されているので必ず目を通してから購入をお願いします\n\n\n\n●内容物\n・red hot thief.fbx\n　フルボディトラッキング対応のモデルデータです\n\n・red hot thief Desktop.fbx\n　デスクトップモーション対応のモデルデータです\n　VRモードでも利用できますが、ボーン配置の関係でフルボディトラッキングの適正は低いです\n\n・基本テクスチャ（.png 4種　.psd 4種）\n　.psdデータ内にUV展開図も同梱されています、色改変や模様をいれたりする場合の参考にどうぞ\n\n・エミッションマップ用テクスチャ 2種\n　こちらは『MnMrShader1_3』での利用を想定した白黒のテクスチャデータです、お好みでご利用ください\n\n・金具マテリアル設定参考.png\n　金具マテリアルの設定をキャプチャしたものです、StandardShaderのMetalicを使って金属感を出しています\n　金具の色を単色にする場合マテリアルカラーで色を指定してあげれば\n　テクスチャの指定をする必要がないので若干の軽量ができます\n\n・Animationデータ 5種\n　VRChatで使える指のAnimationデータです\n　fingerpoint,handopen,hundgun,thumbsup,victory、の5種類を同梱しています\n\n・簡易着せ替えチュートリアル.txt\n　最下部に同じ内容のものを記載しています\n\n・Readme.txt\n　利用規約のテキストです\n　下部にも同じ内容の利用規約文を記載しているので、必ず目を通してから購入をお願いします","url":"https://booth.pm/ja/items/1065766","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/4d603a5d-0611-4e3c-833c-41454379f04e/i/1065766/f35e5a0a-74ca-4332-a803-3a5754975eab_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xDEPIRJxehxo5/C9PD+25cClPskuSk3WvvT5x5ePJ1Q="></script>
+    nonce="fjufiFJ4kY3xO24KXoP9ASWSeYW5dPMfXpn12CvfHHE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -145,6 +142,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +158,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -200,7 +200,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1065766/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               177
@@ -215,14 +215,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1065766/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               177
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
