--- a/VRChat/09/1066609.html
+++ b/VRChat/09/1066609.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "TJ9Enx1d67vAJiHcb05Xkd4yKPkB4mZYEOaop0wkhdM="></script>
+    "8r9Wi8tz+spL6QQT0+ydLcYarJL6EClimxPqAjk4DxQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCで使えるただの帽子","description":"VRC内での仕様を想定した750ポリゴンの帽子です\nハードな方もハーフな方も是非ご利用ください\n\n内容物：FBX・Blenderファイル・README.txt\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【許可事項】\nVRCでの使用、改変\n\n【禁止事項】\n特定の対象への嫌がらせなど他人に不快感を与える行為に使用することを固く禁じます\n\nご不明な点などあればこちらへご連絡ください\nTwitter：@sarena4649","url":"https://booth.pm/ja/items/1066609","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/30d611ee-0eda-4ac5-9e8d-4bc31c8a94dc/i/1066609/cec5b43b-c886-4cc8-ab06-d592190dd22f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TJ9Enx1d67vAJiHcb05Xkd4yKPkB4mZYEOaop0wkhdM="></script>
+    nonce="8r9Wi8tz+spL6QQT0+ydLcYarJL6EClimxPqAjk4DxQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1066609/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               225
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1066609/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               225
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
