updated at: 2023-04-25 19:05, 楓 美柑【アバター】 - 柚吉堂 - BOOTH

--- a/VRChat/79/1066379.html
+++ b/VRChat/79/1066379.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Vbu45auEvTiZj5rUUSfENSnQEH2A9evWLBFnMpm8K+8="></script>
+    "6ta7qj6wxhowyIgjUdJo/K+I4N+f2jPRJ9/DmL8lSJ0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"楓 美柑【アバター】","description":"スーツを着た、ビシッとした女性っていいな。\nそう思って生まれた子です。\n控えめな胸もよい…\n\nリップシンク入り。\nどのような使用法でも一切の言及等は致しませんのでご安心 ※1\nblenderファイルを付属させますので3Dモデリングソフト等でおいじりくださいますのもお勧めいたします。\n\n\n※1　何か起きても責任等は自身で","url":"https://booth.pm/ja/items/1066379","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1066379/2de68582-b174-4795-93f3-3698721bfe21_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Vbu45auEvTiZj5rUUSfENSnQEH2A9evWLBFnMpm8K+8="></script>
+    nonce="6ta7qj6wxhowyIgjUdJo/K+I4N+f2jPRJ9/DmL8lSJ0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1066379/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1066379/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
