--- a/VRChat/12/1066312.html
+++ b/VRChat/12/1066312.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9yQ5UrxMRaE62k/6RVCp/ZiszOKOM5Xx9BHWLVUNGWI="></script>
+    "TfgIu9xevY8CNSC0Vhq12g9prchf2OYpiKemaPQgRRs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC】楓 柚琉【アバター】","description":"スポーツをする女の子特有の引き締まった美しい身体\n陸上女子の足のすばらしさに惹かれ、あの焼けた肌に焦がれ生み出しました子です。\n。\nどのような使用法でも一切の言及等は致しませんのでご安心 ※1\n3Dモデリングソフト等でおいじりくださいますのもお勧めいたします。\n\n\n※1　何か起きても責任等は自身で","url":"https://booth.pm/ja/items/1066312","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1066312/f5369c04-769b-445e-8565-9ecc62d96398_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9yQ5UrxMRaE62k/6RVCp/ZiszOKOM5Xx9BHWLVUNGWI="></script>
+    nonce="TfgIu9xevY8CNSC0Vhq12g9prchf2OYpiKemaPQgRRs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1066312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               6
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1066312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               6
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
