updated at: 2023-04-25 19:05, 【VRC】楓 幸【アバター】 - 柚吉堂 - BOOTH

--- a/VRChat/03/1050703.html
+++ b/VRChat/03/1050703.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kOiReoE2WoTXEhh6mJF0+UMiFivWj0sA/F379+9y7To="></script>
+    "U7UVidgmkoMXQVdatHvyVBgN9X7fO8q7oqyzZgpL8BE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC】楓 幸【アバター】","description":"可愛くなりたい。\nしかし女体となるにはまだ心が決まっていない。\nそんな時は少年になり、可愛がられなれるのも一つの手。\n是非試しに我が息子「楓 幸（コウ）」を手に。\n衣類合わせ三角面11100ポリ\n申し訳程度ではありますがリップシンクと笑顔の表情入り。\nどのような使用法でも一切の言及等は致しませんのでご安心 ※1\nボーン無しFBXを付属させますので3Dモデリングソフト等でおいじりくださいますのもお勧めいたします。\n数日間配布状態でこの子を置いておきますゆえどうぞよろしくお願い致します。（忘れる可能性あり）\n\n※1　何か起きても責任等は自身で","url":"https://booth.pm/ja/items/1050703","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1050703/0abaa70e-4dc2-41d1-8680-876fe82eddae_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kOiReoE2WoTXEhh6mJF0+UMiFivWj0sA/F379+9y7To="></script>
+    nonce="U7UVidgmkoMXQVdatHvyVBgN9X7fO8q7oqyzZgpL8BE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1050703/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1050703/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
