--- a/VRChat/72/1066072.html
+++ b/VRChat/72/1066072.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fVSB53XKRs3AuJBz04SUP+3Txck7jEI1H1g4xWF4flo="></script>
+    "G275IdzWcxtHVuLyDeZqWsRI30iRpUqUr09Zy+Bi6lQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat想定】MCF デリンジャー スリーブガン","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\n飛び出すデリンジャー！\nシャキンと伸びる！以上！！\nモデルは三つ同梱。シェイプキー付きとそうでないショートタイプ、あとボーン付きのデリンジャー。\n\n\nSSは #MCF_VRC をつけてツイートしてくれると私が喜びます。\n\nMCF デリンジャー スリーブガン仕様:716\nMCF デリンジャー スリーブガン仕様ショートシェイプキー無し：594\nMCF デリンジャー:836\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1066072","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1066072/f69e93a2-ee79-44e0-87ec-e185bffc2a2b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fVSB53XKRs3AuJBz04SUP+3Txck7jEI1H1g4xWF4flo="></script>
+    nonce="G275IdzWcxtHVuLyDeZqWsRI30iRpUqUr09Zy+Bi6lQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1066072/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               65
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1066072/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               65
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
