updated at: 2023-04-25 19:05, (無料版) Emote詰め合わせ - VRChat Emote ＋ Unity HumanoidAnimationClip - アンテナショップ【ねここや】 - BOOTH

--- a/VRChat/89/1065089.html
+++ b/VRChat/89/1065089.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZHzCe5NCtydwhnkZsdNlcF3/6qGgdrff1B+i18RMZVM="></script>
+    "tSprolslkKAUGNsdriqYMGRZBP5FH6svV03puIvI54Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"(無料版) Emote詰め合わせ - VRChat Emote ＋ Unity HumanoidAnimationClip","description":"Unity Animationファイル Emoteの詰め合わせ Ver'1.30\n\n-----\n【バージョンアップ情報】\n●Ver'1.30（2021/12/22）\n・新たに モーションを 9種類追加しました。\n・読み込みファイルの構成を変更しました。","url":"https://booth.pm/ja/items/1065089","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/7bb5bc5a-a1f5-4ff7-80fe-8049fab00a8e/i/1065089/20d2d71e-67ed-400f-a72c-181c492402cf_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZHzCe5NCtydwhnkZsdNlcF3/6qGgdrff1B+i18RMZVM="></script>
+    nonce="tSprolslkKAUGNsdriqYMGRZBP5FH6svV03puIvI54Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,10 +162,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1065089/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              2630
+                              2633
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1065089/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              2630
+                              2633
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
