updated at: 2023-04-25 19:06, クリアカバー棺桶 - ネギ侍工房 - BOOTH

--- a/VRChat/74/1065074.html
+++ b/VRChat/74/1065074.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MscnqnLAbYc3lIBbFFtZitWw3ptEv4qQ8p83pBVAhGA="></script>
+    "9fxhL1yo14zZFoXA6sH+3Q41yCirypxxzMoNIQ6qIuM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クリアカバー棺桶","description":"こちらはVRChatを想定して作られた「クリアカバー棺桶」のFBXモデルです。\n\nモデルデータはunitypackage形式です。\n\n\n-----利用規約-----\n・素材そのものの再配布、及び販売は禁止とさせていただきます。\n・それ以外は原則自由に使っていただいて構いませんが、予告なく規約が変更になる可能性があります。\n・規約は常に商品紹介文に記載されているものを最新の規約とします。\n・当商品を購入、使用して発生したトラブル等に関して、当方は一切の責任を負いません。\n\n----------\n最終更新日：2018/10/23","url":"https://booth.pm/ja/items/1065074","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/7daba49c-946f-44ee-9363-049475872f48/i/1065074/6b2ed3e4-471b-45ad-868b-7dd66b5e12e4_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MscnqnLAbYc3lIBbFFtZitWw3ptEv4qQ8p83pBVAhGA="></script>
+    nonce="9fxhL1yo14zZFoXA6sH+3Q41yCirypxxzMoNIQ6qIuM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,7 +153,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1065074/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1065074/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
