updated at: 2023-04-25 19:07, VRChat向け「ビードロ」 - ヨコシマ工房 - BOOTH

--- a/VRChat/50/1064950.html
+++ b/VRChat/50/1064950.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yaNcb9KIZEqI/P6Y6YPwVHFTTOje4um/pUXCwT6rrU8="></script>
+    "M/fhBhkYhxsh8mQ0i3psllm8C5AP7YZVd9+JgBuo0aw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け「ビードロ」","description":"ポルトガルから長崎に伝わったガラス細工で、息を吹きこんだり吸ったりすることでぽっぴんという可愛らしい音を奏でます。\n(モデルにビードロの音は入っていません)\n\nこのビードロは主に個人がVRChatでアバターに装着したり、ワールドに置くことを想定しています。\n\nポリゴン数は616です。\n\npoppenシェイプキーを使うとビードロの底がペコペコ動かせます。\n\n球体側面部のUV展開配列を整えているので自分で好きなガラス模様を描くことができます。\n\nユニティパッケージになっています。\n","url":"https://booth.pm/ja/items/1064950","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1064950/3246b0a9-e637-4685-a00b-0488b7bd6cbb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yaNcb9KIZEqI/P6Y6YPwVHFTTOje4um/pUXCwT6rrU8="></script>
+    nonce="M/fhBhkYhxsh8mQ0i3psllm8C5AP7YZVd9+JgBuo0aw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1064950/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               45
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1064950/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               45
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
