updated at: 2023-04-25 19:08, ≪VRChat Quest向け オリジナル ３Dモデル≫　都途 - 空のあとりえ - BOOTH

--- a/VRChat/23/1387123.html
+++ b/VRChat/23/1387123.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "V2hnG/nG32jlsSfcX+qHyyJKDK1yM7D9AXR7466v0lM="></script>
+    "Mk0DxJqyWkwrECOM8ihplrS9mhtnVvuRcWUdNM5Ke20="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"≪VRChat Quest向け オリジナル ３Dモデル≫　都途","description":"無料配布のVRchat向けのオリジナル5,000ポリゴンモデルとなっております。\nQuest用の選択肢の１つにでもご利用ください。\n\n\n◆ 注意 ◆\n簡易セットアップ用のunity sceneは付属していません。\n付属品については『内容ファイル』を確認してください。","url":"https://booth.pm/ja/items/1387123","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a12bdc4d-2b9f-4309-a04e-8e40fb63d9f6/i/1387123/f3bf55d0-603a-471d-94c0-9013ea138949_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="V2hnG/nG32jlsSfcX+qHyyJKDK1yM7D9AXR7466v0lM="></script>
+    nonce="Mk0DxJqyWkwrECOM8ihplrS9mhtnVvuRcWUdNM5Ke20="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1387123/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1387123/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
